--- a/posts/templates/posts/index.html
+++ b/posts/templates/posts/index.html
@@ -9,9 +9,9 @@
 <section class="lista-de-cards">
     {% for post in post_list %}
     <article class="card">
-        <a href="{% url 'posts:detail' forloop.counter %}"><img src="{{ post.poster_url }}"
-                alt="Poster do filme {{ post.name}}"></a>
-        <p>{{ post.name }} ({{ post.release_year }})</p>
+        <a href="{% url 'posts:detail' post.id %}"><img src="{{ post.poster_url }}"
+                alt="Foto do Restaurante {{ post.restaurant_name}}"></a>
+        <p>{{ post.restaurant_name }} ({{ post.date_of_post }})</p>
     </article>
     {% endfor %}
 </section>
