--- a/posts/templates/posts/create.html
+++ b/posts/templates/posts/create.html
@@ -5,15 +5,23 @@
 <form method="POST" action="{% url 'posts:create' %}">
     {% csrf_token %}
     <p>
-        <label for="id_name">Título:</label>
-        <input type="text" name="name" id="id_name" />
+        <label for="id_restaurant_name">Nome do restaurante:</label>
+        <input type="text" name="restaurant_name" id="id_restaurant_name" />
     </p>
     <p>
-        <label for="id_release_year">Ano de Lançamento:</label>
-        <input type="number" name="release_year" id="id_release_year" />
+        <label for="id_eval">Avaliação Geral (0 a 5):</label>
+        <input type="number" name="eval" id="id_eval" />
     </p>
     <p>
-        <label for="id_poster_url">URL do Poster:</label>
+        <label for="id_content">Review Geral:</label>
+        <input type="text" name="content" id="id_content" />
+    </p>
+    <p>
+        <label for="id_date_of_post">Dia da Experiência no restaurante:</label>
+        <input type="date" name="date_of_post" id="id_date_of_post" />
+    </p>
+    <p>
+        <label for="id_poster_url">URL da foto do restaurante:</label>
         <input type="url" name="poster_url" id="id_poster_url" />
     </p>
     <button type="submit">Criar</button>
