função de update e delete sem django forms

--- a/posts/templates/posts/detail.html
+++ b/posts/templates/posts/detail.html
@@ -1,17 +1,19 @@
 {% extends 'base.html' %}
 
 {% block title %}
-{{ post.name }} ({{ post.release_year }}
+{{ post.restaurant_name }} ({{ post.date_of_post }}
 {% endblock title %}
 
 {% block content %}
 <h2>Detalhes do Post {{ post.restaurant_name }} ({{ post.date_of_post }})</h2>
 
 <section class="dados-de-filme">
-    <img src="{{ post.poster_url }}" alt="Foto do restaurante {{ post.restaurant_name}">
+    <img src="{{ post.poster_url }}" alt="Foto do restaurante {{ post.restaurant_name}}">
     <ul>
         <li> Comentário geral: {{post.content}} </li>
         <li> Avaliação Geral do Restaurante (Nota de 0 a 5): {{ post.eval }} </li>
+        <li><a href="{% url 'posts:update' post.id %}">Editar</a></li>
+        <li><a href="{% url 'posts:delete' post.id %}">Apagar</a></li>
     </ul>
 </section>
 
