--- a/posts/templates/posts/create.html
+++ b/posts/templates/posts/create.html
@@ -1,29 +1,10 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h2>Inserir Novo Post</h2>
+<h2>Inserir Novo Post sobre Restaurante</h2>
 <form method="POST" action="{% url 'posts:create' %}">
     {% csrf_token %}
-    <p>
-        <label for="id_restaurant_name">Nome do restaurante:</label>
-        <input type="text" name="restaurant_name" id="id_restaurant_name" />
-    </p>
-    <p>
-        <label for="id_eval">Avaliação Geral (0 a 5):</label>
-        <input type="number" name="eval" id="id_eval" />
-    </p>
-    <p>
-        <label for="id_content">Review Geral:</label>
-        <input type="text" name="content" id="id_content" />
-    </p>
-    <p>
-        <label for="id_date_of_post">Dia da Experiência no restaurante:</label>
-        <input type="date" name="date_of_post" id="id_date_of_post" />
-    </p>
-    <p>
-        <label for="id_poster_url">URL da foto do restaurante:</label>
-        <input type="url" name="poster_url" id="id_poster_url" />
-    </p>
+    {{ form.as_p }}
     <button type="submit">Criar</button>
 </form>
 
