--- a/templates/base.html
+++ b/templates/base.html
@@ -21,6 +21,7 @@
         <nav id="navegacao-principal">
             <ul>
                 <li><a href="{% url 'posts:index' %}">Postagens</a></li>
+                <li><a href="{% url 'posts:categories' %}">Categorias</a></li>
                 <li><a href="{% url 'about' %}">Sobre</a></li>
             </ul>
         </nav>
