edições de estilo do site

--- a/list_posts/templates/list_posts/about.html
+++ b/list_posts/templates/list_posts/about.html
@@ -8,6 +8,7 @@ Sobre
 <h2>Sobre este site</h2>
 
 <p>
-    Esse site nasceu com o extremo desejo de aprender Django (o que está sendo muito bom inclusive &#9731), somado com a vontade de não pegar DP em nenhuma matéria esse semestre
+    Esse site nasceu com o extremo desejo de aprender Django (o que está sendo muito bom inclusive &#9731), somado com a vontade de não pegar DP em nenhuma matéria esse semestre. 
+    Por motivos de aprendizagem, o site foi desenvolvido tendo como base o site projetado durante as aulas de laboratório. 
 </p>
 {% endblock content %}
