--- a/list_posts/templates/list_posts/index.html
+++ b/list_posts/templates/list_posts/index.html
@@ -5,6 +5,6 @@ Página Inicial
 {% endblock title %}
 
 {% block content %}
-<h1><i>Rest Rev</i></h1>
+<h1><i>Restaurante Review</i></h1>
 <p>O blog de críticas de restaurantes japoneses</p>
 {% endblock content %}
