--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>
-        {% block title %}{% endblock %} | Watch that film!
+        {% block title %}{% endblock %} | Rest Rev, seu ligar de Reviews
     </title>
     <link href="https://fonts.googleapis.com/css?family=Inter&display=swap" rel="stylesheet" />
     <link rel="stylesheet" type="text/css" href="{% static 'style.css' %}">
@@ -17,6 +17,8 @@
 <body>
     <header id="cabecalho-principal">
         <a class="logo" href="{% url 'index' %}"> <img src="{% static 'logo.svg' %}"> </a>
+
+        <h1> Restaurante Review </h1>
 
         <nav id="navegacao-principal">
             <ul>
